fix button vertical alignment

--- a/src/header/Nav.scss
+++ b/src/header/Nav.scss
@@ -22,7 +22,7 @@ $btn-size:     2em;
     user-select: none;
     width: auto;
     position: relative;
-    top: -($btn-size / 4);
+    top: -($btn-size / 3);
 
     &:focus,
     &:active,
